@@ -83,7 +83,32 @@
                         <!--                                <version>0.3.5</version>-->
                     </metadataRepository>
                     <requiredVersion>22.3</requiredVersion>
-
+                    <buildArgs>
+                        -H:+AddAllCharsets  -H:+ReportExceptionStackTraces  --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.math=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED  --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.sql/java.sql=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.desktop/java.awt=ALL-UNNAMED
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.commons.logging.LogFactory-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.commons.logging.LogFactoryService-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.util.Constants-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.commons.logging.impl.Jdk14Logger-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.simple.SimpleLogger-->
+<!--                        &#45;&#45;initialize-at-build-time=ch.qos.logback.classic.Logger-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.status.StatusLogger-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.util.PropertiesUtil-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.util.PropertySource$Util-->
+<!--                        &#45;&#45;initialize-at-build-time=ch.qos.logback.core.status.InfoStatus-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.spi.StandardLevel-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.util.Strings-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.spi.AbstractLogger-->
+<!--                        &#45;&#45;initialize-at-build-time=ch.qos.logback.core.status.StatusBase-->
+<!--                        &#45;&#45;initialize-at-build-time=ch.qos.logback.core.util.StatusPrinter-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.spi.Provider-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.Level-->
+<!--                        &#45;&#45;initialize-at-build-time=org.slf4j.MarkerFactory-->
+<!--                        &#45;&#45;initialize-at-build-time=ch.qos.logback.core.util.Loader-->
+<!--                        &#45;&#45;initialize-at-build-time=org.apache.logging.log4j.util.LoaderUtil-->
+<!--                        &#45;&#45;initialize-at-build-time=ch.qos.logback.classic.Level-->
+<!--                        &#45;&#45;initialize-at-build-time=org.slf4j.LoggerFactory-->
+                        -H:+AllowDeprecatedBuilderClassesOnImageClasspath
+                    </buildArgs>
                 </configuration>
                 <executions>
                     <execution>
